@@ -40,7 +40,6 @@ public slots:
 
 private:
     void sheduleApplet (const QString& appletPath);
-    MApplicationWindow* window();
     PageHandle m_PageHandle;
     QString m_AppletPath;
 };
